--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -14,7 +14,7 @@
     <%=form.label :avatar %>
     <%= form.file_field :avatar %>
 
-    <%= form.button :submit, class: 'btn btn-success' %>
+    <%= form.button :Submit, class: 'btn btn-success' %>
 
   <%end%>
 </div>
