--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
 
   <%= render :partial => 'partials/info_about_user'%>
 
-  <%= render :partial => 'partials/show_tweet'%>
+  <%= render :partial => 'partials/show_tweet', locals: { user: @user } %>
