--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,14 +4,24 @@
     <title>TwitterClone</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= render :partial => 'partials/nav_bar'%>
+    <%= render 'partials/nav_bar'%>
 
     <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <%flash.each do |name, message|%>
+            <div class="alert alert-<%=name%>">
+              <%= message%>
+            </div>
+          <%end%>
+        </div>
+
+      </div>
       <%= yield %>
     </div>
 
