--- a/app/views/partials/_show_tweet.html.erb
+++ b/app/views/partials/_show_tweet.html.erb
@@ -1,24 +1,23 @@
 <div class="timeline">
   <h2 class="title">Tweets</h2>
   <ol class="tweets">
-  <% @user.tweets.reverse_each do |tweet|%>
-    <li class="tweet clearfix">
-      <%= link_to ( image_tag @user.avatar.url(:mini), class: 'gravatar'), user_path(current_user[:id]) if @user.avatar?%>
-      <div class="content">
-        <div class="user">
-          <%= link_to @user.first_name + ' ' +@user.last_name, user_path(@user.id)%>
-        </div>
-        <div class="tweet-content"><%= tweet.text%></div>
-        <div class="tweet-footer">
-          <posted><%= time_ago_in_words(tweet.updated_at) %></posted>
-          <div class="tweet-actions", data-confirm="Are you sure?">
-            <%= link_to 'Delete', tweet_path(tweet[:id]),  method: :delete, data: {confirm: 'Are you sure?'} %>
+    <% @tweets.order(created_at: :desc).each do |tweet|%>
+        <li class="tweet clearfix">
+          <%= user_avatar(tweet.user)%>
+          <div class="content">
+            <div class="user">
+              <%= link_to tweet.user.first_name + ' ' +tweet.user.last_name, user_path(tweet.user.id)%>
+            </div>
+            <div class="tweet-content"><%= tweet.text %></div>
+            <div class="tweet-footer">
+              <posted><%= time_ago_in_words(tweet.updated_at) %></posted>
+              <div class="tweet-actions", data-confirm="Are you sure?">
+                <%= link_to 'Delete', tweet_path(tweet[:id]),  method: :delete, data: {confirm: 'Are you sure?'} if tweet.user == current_user%>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-    </li>
-
+        </li>
   <%end%>
-
+  <%= will_paginate @tweets %>
   </ol>
 </div>
