--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,12 @@
+<% if @user.errors.any?%>
+  <div class="alert alert-danger" role="alert">
+    <ul>
+      <% @user.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <%end%>
+    </ul>
+  </div>
+<%end%>
 <h1>Sing up</h1>
 <%= form_for @user do |form| %>
   <%=form.label :first_name %>
